--- a/analise.ipynb
+++ b/analise.ipynb
@@ -2011,6 +2011,8 @@
   "source": [
     "### Pergunta 2\n",
     "\n",
+    "#### Quais são as variáveis urbanas e sociais com maior poder de influência na determinação da vulnerabilidade? Um estudo será feito em torno das variáveis de risco para dizer qual contribui mais para a ocorrência de vulnerabilidade.",
+    "\n",
     "A partir das correlações calculadas, foi possível identificar quais variáveis urbanas exercem maior influência sobre a vulnerabilidade socioambiental. Entre os subíndices do IQVU, educação e meio ambiente foram os que apresentaram as relações mais expressivas com o risco médio. O subíndice de educação apresentou correlação positiva moderada, indicando que regiões com melhores condições educacionais tendem a ter menor exposição a riscos. Isso sugere que o acesso à educação atua como um fator de proteção, ampliando a capacidade de adaptação das populações e contribuindo para práticas mais conscientes de prevenção e gestão urbana.\n",
     "\n",
     "Em contrapartida, o subíndice de meio ambiente apresentou a correlação negativa mais acentuada, evidenciando que áreas com piores condições ambientais são também as mais suscetíveis a impactos, como alagamentos, deslizamentos e ondas de calor. Essa relação reforça que a degradação ambiental não apenas expressa desigualdades territoriais, mas também intensifica a vulnerabilidade socioambiental.\n",
